# Jelva-SDK

./: CONTRIBUTING.md  README.md
jelva-sdk/: README.md  pyproject.toml
jelva-sdk/docs/: usage.md
jelva-sdk/jelva_sdk/: __init__.py  auth.py  backtest.py  cli.py  client.py  config.py  logging_utils.py  models.py  plugins.py  upload.py  utils.py
jelva-sdk/tests/: test_cli.py  test_cli_deploy.py  test_cli_dev_run.py  test_cli_login.py  test_cli_upload.py  test_client.py  test_plugins.py
